[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emu3p5"
version = "0.1.0"
description = "Emu3.5 model and vision tokenizer utilities"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "accelerate>=0.20.0",
    "einops>=0.7.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "numpy>=1.21.0",
    "omegaconf>=2.3.0",
    "pillow>=9.0.0",
    "protobuf>=3.20.0",
    "tiktoken>=0.12.0",
    "torch>=2.6.0",
    "torchvision>=0.15.0",
    "tqdm>=4.64.0",
    "transformers>=4.48.2",
]

[project.optional-dependencies]
demo = ["gradio==5.49.1"]
vllm = ["vllm==0.11.0; python_version > '3.11'"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
proto = ["assets/*.ttf"]
tokenizer_emu3_ibq = ["*.json", "*.tiktoken", "*.txt"]
